fixed alignment

--- a/public/css/usersProfile/personalInformation.css
+++ b/public/css/usersProfile/personalInformation.css
@@ -1121,8 +1121,9 @@ margin-bottom:5%;
 .secondRow {
     display:flex;
     flex-direction:row;
-    align-items:center;
+    padding-top:2%;
     padding-left:5%;
+    
 }
 .radios {
     display:flex;
